# Hivek-Assembler

./: CMakeLists.txt  README.md
examples/: fib.s  hello.s
include/: HivekDefs.h
include/HivekAssembler/: HivekAssembler.h
include/commands/: Command.h
include/commands/instructions/: Instruction.h
include/commands/label/: Label.h
include/instructions/: Instruction.h
include/lex/: Lex.h
include/parser/: Parser.h
include/token/: Token.h
src/: main.cpp
src/HivekAssembler/: HivekAssembler.cpp
src/commands/instructions/: Instruction.cpp
src/commands/label/: Label.cpp
src/instructions/: Instruction.cpp
src/lex/: Lex.cpp
src/parser/: Parser.cpp
src/token/: Token.cpp
